# myo-react

./: .gitignore  README.md  capacitor.config.ts  package.json
android/app/: build.gradle
api/: .flaskenv  config.py  config.py.sample  create_admin.py  myo.py  pyproject.toml  requirements.txt
api/app/: __init__.py  models.py
api/app/activities/: __init__.py  forms.py  models.py  routes.py
api/app/activities/templates/: view_activities.html  view_activity_details.html  view_activity_feedback.html  view_courses.html  view_materials.html  view_onboarding_answers.html
api/app/api/: __init__.py  models.py  routes.py  schemas.py
api/app/api/templates/api/: create_api_key.html  manage_api_keys.html
api/app/auth/: __init__.py  models.py  routes.py
api/app/errors/: handlers.py
api/app/main/: __init__.py  routes.py
api/app/onboarding/: __init__.py  models.py  routes.py
api/app/static/: myo_manifest.json
api/app/static/activities/1/: Text.docx
api/app/static/activities/13/: Text.docx
api/app/static/activities/15/: Text.docx
api/app/static/activities/17/: Text.docx
api/app/static/activities/4/: Text.docx
api/app/static/activities/7/: Text.docx
api/app/static/css/: 404.css  myo-sidebar-style.css  myo.css  neumorphism.css
api/app/static/js/: config_myo.js  myo.js  neumorphism.js
api/app/templates/: app.html  app_create.html  app_home.html  app_me.html  app_onboarding.html  app_spark.html  app_view_activity.html  header.html  header_superintendant.html  lower_nav.html  public_index.html  superintendant.html
api/app/user/: __init__.py  forms.py  models.py  routes.py
api/app/user/templates/user/: change_registration_code.html  login.html  manage_admin.html  manage_users.html  onboarding.html  profile_edit.html  register.html  register_admin.html  reset.html  reset_with_token.html  troubleshooting.html  user_profile.html
api/migrations/versions/: 6ac7f4971236_.py  6fee0ee0e52a_.py  bf4bd2de74b3_.py  f5c4c738eb99_.py
deployment/: react-flask-app.nginx  react-flask-app.service
ios/App/: Podfile
public/: index.html  manifest.json  onboarding.json
public/activities/: activities.json
src/: App.css  App.js  config.js  config_local.js  index.css  index.js
src/Navbar/: Navbar.css
src/fonts/: font.css
src/helpers/: auth-header.js  (+1 more)
(+97 files in other folders)
