[tool.poetry]
name = "myo-flask-api"
version = "0.1.0"
description = ""
authors = ["Siequnu <11821606+Siequnu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
alembic = "^1.6.5"
aniso8601 = "^9.0.1"
appdirs = "^1.4.4"
arrow = "^1.1.0"
atomicwrites = "==1.3.0"
attrs = "^21.2.0"
blinker = "^1.4"
cairocffi = "^1.2.0"
certifi = "^2021.5.30"
cffi = "^1.14.5"
chardet = "^4.0.0"
click = "==8.0.1"
cryptography = "^3.4.7"
cssselect2 = "^0.4.1"
decorator = "^5.0.9"
defusedxml = "==0.6.0"
distlib = "^0.3.2"
dominate = "^2.6.0"
filelock = "^3.0.12"
flask-oidc = "^1.4.0"
html5lib = "^1.1"
httplib2 = "^0.19.1"
idna = "==2.8"
importlib-metadata = "^4.5.0"
infinity = "^1.5"
intervals = "==0.8.1"
itsdangerous = "2.0.1"
jdcal = "^1.4.1"
limits = "^1.5.1"
lml = "==0.0.9"
more-itertools = "^8.8.0"
ndg-httpsclient = "==0.5.1"
pathlib = "^1.0.1"
pbr = "==5.4.5"
pluggy = "^0.13.1"
py = "==1.8.0"
pyasn1-modules = "==0.2.5"
pyasn1 = "==0.4.5"
pycparser = "==2.20"
pyparsing = "^2.4.7"
pytest-flask = "==0.14.0"
pytest = "==4.4.1"
python-dateutil = "==2.8.0"
python-dotenv = "==0.13.0"
python-editor = "^1.0.4"
pytz = "^2021.1"
requests = "^2.25.1"
rsa = "^4.7.2"
six = "^1.16.0"
texttable = "^1.6.3"
tinycss2 = "==1.0.2"
urllib3 = "^1.26.5"
validators = "^0.18.2"
virtualenv-clone = "==0.5.4"
virtualenv = "^20.4.7"
visitor = "==0.1.3"
webencodings = "==0.5.1"
xvfbwrapper = "==0.2.9"
zipp = "==3.1.0"
Brotli = "==1.0.7"
CairoSVG = "==2.4.2"
et_xmlfile = "==1.0.1"
Flask-HTTPAuth = "==3.2.4"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.0.1"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.0.1"
Jinja2 = "==3.0.1"
Mako = "^1.1.4"
MarkupSafe = "==2.0.1"
PyMySQL = "^1.0.2"
PyNaCl = "==1.4.0"
pyOpenSSL = "^20.0.1"
Pyphen = "==0.9.5"
SQLAlchemy-Utils = "^0.37.6"
SQLAlchemy = "^1.4.18"
Werkzeug = "==2.0.1"
colorthief = "^0.2.1"
Flask-JWT-Extended = "^4.2.0"
Authlib = "^0.15.4"
Flask-Cors = "^3.0.10"
Flask-Executor = "^0.9.4"
SQLAlchemy-serializer = "^1.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
